[fix] chat text wrap

--- a/src/main/resources/styles/main.css
+++ b/src/main/resources/styles/main.css
@@ -5,3 +5,7 @@
 	-fx-alignment: center;
 	-fx-spacing: 20px;
 }
+
+.table-element {
+	-fx-text-alignment: justify;
+}
